--- a/Lesson-1/style.css
+++ b/Lesson-1/style.css
@@ -84,7 +84,6 @@
 }
 
 .button {
-  width: 100%;
   height: 25px;
 }
 
@@ -109,7 +108,8 @@
 .menu__img {
   background-image: url(../Lesson-1/img/h3.svg);
   display: block;
-  height: 100%;
+  width: 32px;
+  height: 23px;
 }
 
 .menu__link {
@@ -868,26 +868,63 @@
 }
 
 .page__button__left {
-  width: 10px;
+  width: 15px;
   height: 10px;
-  border: 1px solid red;
   margin-left: 10px;
-  margin-top: 50px;
+  margin-top: 55px;
+  background-image: url(../Lesson-1/img/FILTER.svg);
+}
+
+.page__button__left:hover {
+  background-image: url(../Lesson-1/img/FILTER_PINK.svg);
 }
 
 .menu__size__left {
   width: 360px;
-  height: 531px;
-  border: 1px solid #000;
+  position: relative;
   position: absolute;
   z-index: 2;
   background-color: #FFFFFF;
   left: 188px;
   top: 300px;
+  -webkit-box-shadow: 0 8px 10px rgba(0, 0, 0, 0.4), 0 28px 30px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 8px 10px rgba(0, 0, 0, 0.4), 0 28px 30px rgba(0, 0, 0, 0.3);
+}
+
+.catalog_menu_button {
+  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-decoration: none;
+}
+
+.text_menu_catalog {
+  padding: 10px 0px 0px 11px;
+  font-family: Lato;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #EF5B70;
+}
+
+.block_catalog {
+  width: 5px;
+  height: 37px;
+  background-color: #EF5B70;
+  margin-left: 17px;
+  position: absolute;
+}
+
+.hr_catalog {
+  width: 327px;
+  margin-left: 18px;
+  margin-bottom: 19px;
 }
 
 .main__page__right {
-  margin-left: 310px;
+  margin-left: 295px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -904,6 +941,8 @@
   left: 160px;
   top: 24px;
   z-index: 0;
+  -webkit-box-shadow: 0 8px 10px rgba(0, 0, 0, 0.4), 0 28px 30px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 8px 10px rgba(0, 0, 0, 0.4), 0 28px 30px rgba(0, 0, 0, 0.3);
 }
 
 .input__menu {
@@ -924,15 +963,19 @@
   line-height: 17px;
   color: #6F6E6E;
   margin-left: 20px;
-  border: 1px solid #000;
+}
+
+details > summary {
+  list-style: none;
 }
 
 .page__button {
   width: 10px;
   height: 10px;
-  border: 1px solid red;
   margin-left: 10px;
-  margin-top: 4px;
+  margin-top: 7px;
+  background-image: url(../Lesson-1/img/Vector_bottom.svg);
+  background-repeat: no-repeat;
 }
 
 .main__page {
@@ -944,13 +987,60 @@
 .pages {
   width: 283px;
   height: 43px;
-  border: 1px solid #000;
+  border: 1px solid #EBEBEB;
   margin-top: 49px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   margin-left: 415px;
   margin-bottom: 97px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.vector_left {
+  display: block;
+  background-image: url(../Lesson-1/img/Vector_shop_L.svg);
+  width: 8px;
+  height: 14px;
+  margin: 15px 0px 15px 15px;
+  background-repeat: no-repeat;
+}
+
+.vector_right {
+  display: block;
+  background-image: url(../Lesson-1/img/Vector_shop_R.svg);
+  width: 8px;
+  height: 14px;
+  margin: 15px 0px 0px 15px;
+}
+
+.vector_number {
+  text-decoration: none;
+  margin: 12px 0px 0px 22px;
+  font-family: Lato;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  color: #6F6E6E;
+}
+
+.vector_number_2 {
+  text-decoration: none;
+  margin-top: 12px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  color: #6F6E6E;
+  font-family: Lato;
+}
+
+.vector_number:hover {
+  color: #EF5B70;
+}
+
+.vector_number_2:hover {
+  color: #EF5B70;
 }
 
 .top__background {
@@ -1428,5 +1518,110 @@
 
 .text_section_3 {
   padding-top: 19px;
+}
+
+.acor-container {
+  margin: 0px 0;
+}
+
+.acor-container .acor-body {
+  width: calc(100% - 40px);
+  height: 0;
+  color: #FFF 0, 0, 0, 0;
+  line-height: 18px;
+  padding: 0 30px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-transition: color 0.5s, padding 0.5s;
+  transition: color 0.5s, padding 0.5s;
+  overflow: hidden;
+  font-family: Verdana, sans-serif;
+  font-size: 16px;
+}
+
+.acor-container .acor-body p {
+  margin: 0 0 10px;
+}
+
+.acor-container label {
+  cursor: pointer;
+  background-color: #FFF;
+  display: block;
+  padding: 10px 20px;
+  width: 340px;
+  color: #6F6E6E;
+  font-weight: 300;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  z-index: 100;
+  -webkit-transition: color .35s;
+  transition: color .35s;
+  margin-left: 16px;
+  font-family: Lato;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  border-bottom: 1px solid #EBEBEB;
+  margin-bottom: 18px;
+}
+
+.acor-container label:hover {
+  color: #EF5B70;
+}
+
+.acor-container input {
+  display: none;
+}
+
+.acor-container input:checked + label {
+  background-color: #FFF;
+  color: #6F6E6E;
+  border: 0px 0px 1px 0px solid #000;
+}
+
+.acor-container input:checked + label:before {
+  -webkit-transition: -webkit-transform .35s;
+  transition: -webkit-transform .35s;
+  transition: transform .35s;
+  transition: transform .35s, -webkit-transform .35s;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+.acor-container input:checked + label + .acor-body {
+  height: auto;
+  color: #000;
+}
+
+.acor-body {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.acor-container {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.asd {
+  width: 300px;
+  display: block;
+  font-family: Lato;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #6F6E6E;
+  text-decoration: none;
+  margin: 11px 0px 11px 8px;
+}
+
+.asd:hover {
+  color: #EF5B70;
 }
 /*# sourceMappingURL=style.css.map */
