--- a/Lesson-1/style.css
+++ b/Lesson-1/style.css
@@ -105,6 +105,7 @@
           flex-direction: column;
   -webkit-box-shadow: 0px 0px 10px black;
           box-shadow: 0px 0px 10px black;
+  z-index: 1;
 }
 
 .start_menu {
@@ -115,14 +116,11 @@
 }
 
 .menu_close {
-  position: absolute;
-  right: 20px;
-  top: 17px;
-  display: none;
-}
-
-.menu_close:hover .menu {
-  display: none;
+  display: block;
+  width: 12px;
+  height: 12px;
+  margin-left: 128px;
+  margin-top: 15px;
 }
 
 .menu__img {
@@ -729,12 +727,36 @@
 }
 
 .footer_button {
-  background-image: url(../Lesson-1/img/footer_button.svg);
+  background-color: #F16D7F;
   display: block;
   height: 100%;
   background-repeat: no-repeat;
   width: 100px;
-  height: 50px;
+  border-radius: 0px 15px 15px 0px;
+  text-decoration: none;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.footer_button:hover {
+  background-color: #fff;
+}
+
+.footer_button_text:hover {
+  color: #F16D7F;
+}
+
+.footer_button_text {
+  font-family: Lato;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #FFFFFF;
+  padding: 16px;
 }
 
 .footer__placeholder {
@@ -1139,6 +1161,7 @@ details > summary {
   background-color: #fff;
   text-align: center;
   margin-bottom: 129px;
+  border: 1px solid #EAEAEA;
 }
 
 .middle_product_text_1 {
@@ -1214,7 +1237,7 @@ details > summary {
 }
 
 .link_middle_product {
-  background-image: url(../Lesson-1/img/Vector.svg);
+  background-image: url(../Lesson-1/img/arrowwww.svg);
   display: block;
   width: 10px;
   height: 5px;
@@ -1224,11 +1247,13 @@ details > summary {
 
 .link_middle_product_button {
   background-image: url(../Lesson-1/img/Add_to_Cart.svg);
+  background-repeat: no-repeat;
   display: block;
   width: 212px;
   height: 49px;
   margin-left: 465px;
   margin-bottom: 65px;
+  text-decoration: none;
 }
 
 .bottom_block_product {
@@ -1343,6 +1368,20 @@ details > summary {
   margin-top: 72px;
   text-decoration: none;
   text-align: center;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.left_shop_button:hover {
+  background-color: #F16D7F;
+}
+
+.right_shop_button:hover {
+  background-color: #F16D7F;
+}
+
+.text_shop_link:hover {
+  color: #fff;
 }
 
 .right_shop_button {
@@ -1351,6 +1390,8 @@ details > summary {
   margin-top: 72px;
   text-decoration: none;
   text-align: center;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .text_shop_link {
@@ -1443,19 +1484,31 @@ details > summary {
 }
 
 .confurm_button {
-  width: 273px;
+  margin: 17px 43px 0px 43px;
   display: block;
   text-align: center;
-  padding: 15px 0px 15px 0px;
-  margin: 17px 42px 42px 42px;
   text-decoration: none;
   background-color: #F16D7F;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.confurm_button:hover {
+  background-color: #fff;
+}
+
+.confurm_button_text {
   font-family: Lato;
   font-style: normal;
   font-weight: 300;
   font-size: 16px;
   line-height: 19px;
   color: #FFFFFF;
+  padding: 15px 42px 15px 42px;
+}
+
+.confurm_button_text:hover {
+  color: #F16D7F;
 }
 
 .registration_middle {
